# N0vaResourceExtractor

./: .gitignore  CMakeLists.txt  LICENSE  N0vaResourceExtractor.exe.manifest  N0vaResourceExtractor.exe.rc  N0vaResourceExtractor.sln  README.md  def.h  main.cpp
.github/workflows/: make.yml
CLIApp/: CLIApp.vcxproj  CLIApp.vcxproj.filters  main.cpp
UIApp/: Help.html  Help.md  UIApp.vcxproj  UIApp.vcxproj.filters  def.h  ui.cpp
